2008-06-07  John Peacock <jpeacock@cpan.org>

	Forgot to bump the $VERSION.  Go figure.

2008-06-07  John Peacock <jpeacock@cpan.org>

	Improve POD to clarify usage and prevent confusion.

2008-04-01  John Peacock <jpeacock@cpan.org>

	Optionally use the more efficient XSLoader instead of DynaLoader.
	Resolves http://rt.cpan.org//Ticket/Display.html?id=34590

2007-10-24  John Peacock <jpeacock@cpan.org>

	Data::Dumper is sometimes too clever for its (and our) own good.
	When copying an existing version object, directly set newSViv
	instead of using &PL_sv_yes, since the latter has a PV slot which
	looks shared to D::D's jaundiced eye.

	Resolves:
		http://rt.cpan.org/Public/Bug/Display.html?id=30004

2007-09-20  John Peacock <jpeacock@cpan.org>

	New code to handle versions too large to fit into an IV slot.
	Both the pure Perl and XS code are now safe to use with ~0
	Test new functionality.

2007-04-17  John Peacock <jpeacock@cpan.org>

	Neglected to delete or comment out a $DB::single (again).

2007-04-17  John Peacock <jpeacock@cpan.org>

	One last place that needed a leading 'v' (for non-magic v-strings).

2007-04-17  John Peacock <jpeacock@cpan.org>

	v-string created version objects always stringify with a leading 'v' for
	consistency's sake, since we have no way of knowing whether one was present
	for 5.6.0 <= Perl < 5.8.1 (non-magic v-strings).

2007-04-17  John Peacock <jpeacock@cpan.org>

	When copying an existing version object, forgot to copy the original string
	representation.

2007-04-14  John Peacock <jpeacock@cpan.org>

	Return original string value for all stringification cases except for
	qv(1.2) which returns 'v1.2' for roundtrip purposes.

2007-04-12  John Peacock <jpeacock@cpan.org>

	Output the original string form for numeric versions for XS code now.
	Ready to release to CPAN.

2007-04-12  John Peacock <jpeacock@cpan.org>

	It will be less surprising to overload string comparisons (now that the