@@ -1,6 +1,6 @@
 ---
 name: version
-version: 0.75
+version: 0.7501
 author:
   - 'John Peacock E<lt>jpeacock@cpan.orgE<gt>'
 abstract: Perl extension for Version Objects
@@ -8,15 +8,15 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
-  perl: '> 5.005, < 5.009'
+  perl: '> 5.005'
 dynamic_config: 1
 provides:
   version:
     file: lib/version.pm
-    version: 0.75
+    version: 0.7501
   version::vxs:
     file: vutil/lib/version/vxs.pm
-    version: 0.75
+    version: 0.7501
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
